Implemented basic JWT authentication
